Modifica destino de carpeta en Drive a root para evitar problemas de creación de carpetas duplicadas

--- a/config/gee/export_buildings.yaml
+++ b/config/gee/export_buildings.yaml
@@ -16,7 +16,7 @@ dataset:
   scale_meters: 4
 
 export:
-  drive_folder: "GEE_Exports"
+  drive_folder: null
   file_format: "GeoJSON"
 
   # Metadatos para el nombre del archivo
