--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,8 @@ dependencies = [
     "google-cloud-storage (>=3.7.0,<4.0.0)",
     "google-api-python-client (>=2.187.0,<3.0.0)",
     "pydrive2 (>=1.21.3,<2.0.0)",
-    "google-auth-oauthlib (>=1.2.3,<2.0.0)"
+    "google-auth-oauthlib (>=1.2.3,<2.0.0)",
+    "dvc (>=3.66.1,<4.0.0)"
 ]
 
 
